--- a/style.css
+++ b/style.css
@@ -1,4 +1,63 @@
 #Animal_title{
     background-color: pink;
     padding: 3px;
+    color: rgb(235, 11, 59);
+}
+
+body{
+    font-family: fantasy;
+    background: pink;
+}
+
+#Animal_title p{
+    font-family: 'Source Code Pro', monospace;
+    font-size: 18px;
+    font-weight: bold;
+    letter-spacing: 2px;
+    color:rgb(228, 15, 228);
+}
+
+.header_div button{
+    font-family: fantasy;
+    margin: 30px;
+    font-size: 25px;
+    font-weight: bold;
+    color: blueviolet;
+    letter-spacing: 3px;
+    border: blueviolet solid 2px;
+    text-shadow: 2px 2px 2px blue;
+}
+
+#div_footer{
+    position: fixed;
+    bottom:0;
+    text-align: center;
+    font-size: 25px;
+    text-shadow: 2px 2px 2px gray;
+    background:orange;
+    color: crimson;
+    line-height: 2;
+}
+
+.header_div h3{
+   color: orange;
+   font-style: normal; 
+   background: yellow;
+   width: 20%;
+   height: 30px;
+    vertical-align: text-bottom;
+}
+
+.header_div h4{
+    color: lightblue;
+    font-style: normal;
+    font-size: 25px;
+    background:red;
+    width: 20%;
+    height: 30px;
+     vertical-align: text-bottom;
+}
+
+#footer{
+    color: limegreen;
 }
